--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.0.4",
+    "axios": "^1.2.0",
+    "bootstrap": "^5.1.3",
+    "context": "^4.0.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^18.2.0",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "use-context": "^0.0.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
